--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "react": "^18.1.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
     "react-redux": "^v8.0.1",
     "react-router-dom": "^6.3.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "sequelize": "^6.20.0",
     "volleyball": "^1.5.1",
